--- a/index.html
+++ b/index.html
@@ -1,78 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="ru">
+<!--<![endif]-->
+<head>
+	<meta charset="utf-8" />
+	<title>Arnato Baldesarini</title>
+	<link rel="shortcut icon" href="img/stock.png" />
+	<meta name="description" content="" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
+	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
+	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
+	<link rel="stylesheet" href="css/fonts.css" />
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/media.css" />
+</head>
+<body>
+	<!--[if lt IE 9]>
+	<script src="libs/html5shiv/es5-shim.min.js"></script>
+	<script src="libs/html5shiv/html5shiv.min.js"></script>
+	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+	<script src="libs/respond/respond.min.js"></script>
+	<![endif]-->
+	<div class="container-fluid menu">
+		<ul class="menu-left">
+			<li class="pnk news">
+				<a href="">новости</a>
+			</li>
+			<li class="pnk dogs">
+				<a href="#">наши<br>собаки</a>
+				<i class="fa fa-angle-down" aria-hidden="true"></i>
+			</li>
+			<li class="pnk pappi">
+				<a href="">Продажа<br>щенков</a>
+			</li>
+			<li class="pnk gallery">
+				<a href="">Галерея</a>
+			</li>
+			<li class="pnk inf">
+				<a href="">Полезная<br>информация</a>
+			</li>
+		</ul>
+		<div class="drop-menu dog-menu">
+			<ul>
+				<li><a href="#"><img class="im" src="img/stock.png" width="40" height="40">Сибирские Хаски</a></li>
+				<li><a href="#">Йоркширский Терьер</a></li>
+				<li><a href="#">Бивер</a></li>
+				<li><a href="#">Американская Акита</a></li>
+				<li><a href="#">Сиба (Шиба-Ину)</a></li>
+			</ul>
+		</div>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-   <div class="container">
-     <div class="row">
-       <div class="col-md-6">
-         <div class="panel-group" id="accordion">
-           <div class="panel panel-success">
-             <div class="panel-heading">
-               <h4 class="panel-title">
-                 <a href="#collapse-1" data-toggle="collapse" data-parent="#accordion">Открыть 1-ю складку</a>
-               </h4>
-             </div>
-             <div id="collapse-1" class="panel-collapse collapse">
-                <div class="panel-body">
-                  <p>
-                    Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте
-                  </p>
-                </div>
-             </div>
-           </div>
-           <div class="panel panel-default">
-             <div class="panel-heading">
-               <h4 class="panel-title">
-                 <a href="#collapse-2" data-toggle="collapse" data-parent="#accordion">Открыть 2-ю складку</a>
-               </h4>
-             </div>
-             <div id="collapse-2" class="panel-collapse collapse">
-                <div class="panel-body">
-                  <p>
-                    Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте
-                  </p>
-                </div>
-             </div>
-           </div>
-           <div class="panel panel-default">
-             <div class="panel-heading">
-               <h4 class="panel-title">
-                 <a href="#collapse-3" data-toggle="collapse" data-parent="#accordion">Открыть 3-ю складку</a>
-               </h4>
-             </div>
-             <div id="collapse-3" class="panel-collapse collapse">
-                <div class="panel-body">
-                  <p>
-                    Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте Любой контенте
-                  </p>
-                </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>      
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+		<div class="brend">
+			<a class="a-b hidden-md hidden-sm hidden-xs brand" href="#"><img src="svg/(AB).svg" height="70px"></a>
+			<a class="ab hidden-lg hidden-sm hidden-xs" href="#"><img src="svg/(A-B).svg" height="70px"></a>
+		</div>	
+		<ul class="menu-right soc-menu">
+			<li class="soc">
+				<a href="#"><img class="im" src="img/iconmonstr-facebook-5-32.png"></a>
+			</li>
+			<li class="soc">
+				<a href="#"><img class="im" src="img/iconmonstr-vk-5-32.png"></a>
+			</li>
+			<li class="soc">
+				<a href="#"><img class="im" src="img/iconmonstr-instagram-10-32.png"></a>
+			</li>
+		</ul>
+		<batton class="menu-right min-soc">
+			<i class="soc fa fa-bars bars" aria-hidden="true"></i>
+		</batton>
+		<ul class="menu-right about">
+			<li class="pnk">
+				<a href="">о нас</a>
+			</li>
+			<li class="pnk">
+				<a href="">контакты</a>
+			</li>
+		</ul>	
+		<ul class="menu-right min-about">
+			<batton class="menu-right min-soc">
+				<i class="soc fa fa-question-circle-o" aria-hidden="true"></i>
+			</batton>
+			<batton class="menu-right min-soc">
+				<i class="soc fa fa-envelope-o" aria-hidden="true"></i>
+			</batton>
+		</ul>			
+	</div>
+	<div class="theme_dog">
+		<img class="husky" src="img/Husky_theme.jpg" alt="" width="100%">
+		<img class="husky_1" src="svg/Husky_1.svg" height="70%">
+	</div>
+	
+	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
+	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
+	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
+	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+	<script src="libs/owl-carousel/owl.carousel.min.js"></script>
+	<script src="libs/countdown/jquery.plugin.js"></script>
+	<script src="libs/countdown/jquery.countdown.min.js"></script>
+	<script src="libs/countdown/jquery.countdown-ru.js"></script>
+	<script src="libs/landing-nav/navigation.js"></script>
+	<script src="js/common.js"></script>
+	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
+	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
+</body>
 </html>
