--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 	<link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
-	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
+	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />	
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
 </head>
 <body>
 	<!--[if lt IE 9]>
@@ -92,23 +94,65 @@
 			</batton>
 		</ul>			
 	</div>
-	<div class="theme_dog">
-		<img class="husky" src="img/Husky_theme.jpg" alt="" width="100%">
+	<div class="container-fluid cor">		
+
+		<img src="img/Husky_theme.jpg" alt="" width="100%">
 		<img class="husky_1" src="svg/Husky_1.svg" height="70%">
+
 	</div>
-	
-	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
-	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
-	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
-	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-	<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-	<script src="libs/countdown/jquery.plugin.js"></script>
-	<script src="libs/countdown/jquery.countdown.min.js"></script>
-	<script src="libs/countdown/jquery.countdown-ru.js"></script>
-	<script src="libs/landing-nav/navigation.js"></script>
-	<script src="js/common.js"></script>
-	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
-</body>
-</html>
+	<div class="container-fluid content">
+		
+		<div class="col-md-3 news-block">
+			<h1 class="news_h">Новости</h1>	
+			<div class="row news-header">
+
+				<div class="col-md-4 news-date">
+					<span class="fa-stack fa-lg">
+						<i class="fa fa-calendar-o fa-2x fa-stack-1x"></i>
+						<i class="fa fa-stack-2x day">7</i>
+					</span>
+					<span>
+						<p class="month">месяц</p>
+					</span>
+				</div>
+				<div class="col-md-8 news-name">
+					<h3>Название новости которая тут будtn</h3>					
+				</div>
+			</div>
+			<div class="row news-content">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum veniam, velit impedit officia adipisci aut eveniet incidunt illo repellendus esse at illum similique fugiat neque necessitatibus aliquid, blanditiis voluptatem accusamus.
+				</div>
+
+			</div>
+
+			<div class="col-md-7 content-block">
+				<div class="content-name">
+					<h1>О нас</h1>
+				</div>
+				<img src="img/Master.jpg" alt="" class="master" width="30%">
+				<div class="cont">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui.</p>
+				</div>
+			</div>	
+			<div class="col-md-2 gallery-block">
+			</div>
+			<div class="container-fluid footer">
+				
+			</div>	
+
+		</div>	
+		<script src="libs/jquery/jquery-1.11.1.min.js"></script>
+		<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+		<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
+		<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
+		<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+		<script src="libs/owl-carousel/owl.carousel.min.js"></script>
+		<script src="libs/countdown/jquery.plugin.js"></script>
+		<script src="libs/countdown/jquery.countdown.min.js"></script>
+		<script src="libs/countdown/jquery.countdown-ru.js"></script>
+		<script src="libs/landing-nav/navigation.js"></script>
+		<script src="js/common.js"></script>
+		<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
+		<!-- Google Analytics counter --><!-- /Google Analytics counter -->
+	</body>
+	</html>
