--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 		</ul>
 		<div class="drop-menu dog-menu">
 			<ul>
-				<li><a href="#"><img class="im" src="img/stock.png" width="40" height="40">Сибирские Хаски</a></li>
-				<li><a href="#">Йоркширский Терьер</a></li>
-				<li><a href="#">Бивер</a></li>
-				<li><a href="#">Американская Акита</a></li>
-				<li><a href="#">Сиба (Шиба-Ину)</a></li>
+				<li><a href="#"><img class="im" src="img/stock.png" width="40" height="40">Сибирский Хаски</a></li>
+				<li><a href="#"><img class="im" src="img/1.png" width="40" height="40">Йоркширский Терьер</a></li>
+				<li><a href="#"><img class="im" src="img/4.png" width="40" height="40">Бивер</a></li>
+				<li><a href="#"><img class="im" src="img/2.png" width="40" height="40">Американская Акита</a></li>
+				<li><a href="#"><img class="im" src="img/3.png" width="35" height="40">Сиба (Шиба-Ину)</a></li>
 			</ul>
 		</div>
 
@@ -68,21 +68,21 @@
 				<a href="#"><img class="im" src="img/iconmonstr-facebook-5-32.png"></a>
 			</li>
 			<li class="soc">
-				<a href="#"><img class="im" src="img/iconmonstr-vk-5-32.png"></a>
+				<a href="https://vk.com/club88741165"><img class="im" src="img/iconmonstr-vk-5-32.png"></a>
 			</li>
 			<li class="soc">
-				<a href="#"><img class="im" src="img/iconmonstr-instagram-10-32.png"></a>
+				<a href="https://www.instagram.com/arnato/"><img class="im" src="img/iconmonstr-instagram-10-32.png"></a>
 			</li>
 		</ul>
 		<batton class="menu-right min-soc">
 			<i class="soc fa fa-bars bars" aria-hidden="true"></i>
 		</batton>
 		<ul class="menu-right about">
-			<li class="pnk">
-				<a href="">о нас</a>
+			<li class="pnk a_ab">
+				<a href="#">о нас</a>
 			</li>
 			<li class="pnk">
-				<a href="">контакты</a>
+				<a href="#">контакты</a>
 			</li>
 		</ul>	
 		<ul class="menu-right min-about">
@@ -104,7 +104,7 @@
 		
 		<div class="col-md-3 news-block">
 			<h1 class="news_h">Новости</h1>	
-			<div class="row news-header">
+			<div id="nh" class="row news-header">
 
 				<div class="col-md-4 news-date">
 					<span class="fa-stack fa-lg">
@@ -128,19 +128,18 @@
 			<div class="col-md-7 content-block">
 				<div class="content-name">
 					<h1>О нас</h1>
-				</div>
-				<img src="img/Master.jpg" alt="" class="master" width="30%">
+				</div>				
+				<img src="img/Master.jpg" class="images" alt="" width="30%">				
 				<div class="cont">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui.</p>
 				</div>
 			</div>	
 			<div class="col-md-2 gallery-block">
 			</div>
-			<div class="container-fluid footer">
-				
-			</div>	
-
-		</div>	
+		</div>
+		<div class="container-fluid footer">
+			<h3>Контакты</h3>
+		</div>
 		<script src="libs/jquery/jquery-1.11.1.min.js"></script>
 		<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 		<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
