--- a/index.html
+++ b/index.html
@@ -1,157 +1,159 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!-->
 <html lang="ru">
-<!--<![endif]-->
 <head>
-	<meta charset="utf-8" />
-	<title>Arnato Baldesarini</title>
-	<link rel="shortcut icon" href="img/stock.png" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css" />
-	<link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
-	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
-	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />	
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/media.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--Style CSS-->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
+    <!--Каруселька CSS-->
+    <link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css">    
+    <link rel="stylesheet" href="libs/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="libs/owl-carousel/owl.transitions.css">     
+    <!--Подключение шрифтов-->    
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Lobster&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+
+
+    <title>Arnato-Baldesarini</title>
+    <link rel="shortcut icon" href="images/stock.png">
 </head>
 <body>
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
-	<div class="container-fluid menu">
-		<ul class="menu-left">
-			<li class="pnk news">
-				<a href="">новости</a>
-			</li>
-			<li class="pnk dogs">
-				<a href="#">наши<br>собаки</a>
-				<i class="fa fa-angle-down" aria-hidden="true"></i>
-			</li>
-			<li class="pnk pappi">
-				<a href="">Продажа<br>щенков</a>
-			</li>
-			<li class="pnk gallery">
-				<a href="">Галерея</a>
-			</li>
-			<li class="pnk inf">
-				<a href="">Полезная<br>информация</a>
-			</li>
-		</ul>
-		<div class="drop-menu dog-menu">
-			<ul>
-				<li><a href="#"><img class="im" src="img/stock.png" width="40" height="40">Сибирский Хаски</a></li>
-				<li><a href="#"><img class="im" src="img/1.png" width="40" height="40">Йоркширский Терьер</a></li>
-				<li><a href="#"><img class="im" src="img/4.png" width="40" height="40">Бивер</a></li>
-				<li><a href="#"><img class="im" src="img/2.png" width="40" height="40">Американская Акита</a></li>
-				<li><a href="#"><img class="im" src="img/3.png" width="35" height="40">Сиба (Шиба-Ину)</a></li>
-			</ul>
-		</div>
+    <nav class="container-fluid main_menu">
+        <div class="menu menu-left">
+            <ul>
+                <li><a href="">новости</a></li>
+                <li><a href="">наши собаки</a></li>
+                <li><a href="">продажа щенков</a></li>
+                <li><a href="gallery.html">галерея</a></li>
+                <li><a href="">полезная информация</a></li>
+            </ul>
+        </div>
+        <div class="logo">
+            <a class="hidden-md hidden-sm hidden-xs" href="#">
+                <img src="svg/(A-B).svg" height="70px">
+            </a>
+            <a class="hidden-lg ab" href="#">
+                <img src="svg/(AB).svg" height="70px">
+            </a>                    
+        </div>
+        <div  class="menu menu-right">
+            <ul>
+                <li>
+                    <a href="index.html" class="hidden-sm hidden-xs">о нас</a>
+                    <a href="about.html" class="hidden-lg hidden-md">
+                        <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="contact.html.html" class="hidden-sm hidden-xs">контакты</a>
+                    <a href="contact.html.html" class="hidden-lg hidden-md">
+                        <i class="glyphicon glyphicon-envelope" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                   <a href="https://vk.com/club88741165" >
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-vk fa-stack-1x"></i>
+                    </span>
+                </a>
 
-		<div class="brend">
-			<a class="a-b hidden-md hidden-sm hidden-xs brand" href="#"><img src="svg/(AB).svg" height="70px"></a>
-			<a class="ab hidden-lg hidden-sm hidden-xs" href="#"><img src="svg/(A-B).svg" height="70px"></a>
-		</div>	
-		<ul class="menu-right soc-menu">
-			<li class="soc">
-				<a href="#"><img class="im" src="img/iconmonstr-facebook-5-32.png"></a>
-			</li>
-			<li class="soc">
-				<a href="https://vk.com/club88741165"><img class="im" src="img/iconmonstr-vk-5-32.png"></a>
-			</li>
-			<li class="soc">
-				<a href="https://www.instagram.com/arnato/"><img class="im" src="img/iconmonstr-instagram-10-32.png"></a>
-			</li>
-		</ul>
-		<batton class="menu-right min-soc">
-			<i class="soc fa fa-bars bars" aria-hidden="true"></i>
-		</batton>
-		<ul class="menu-right about">
-			<li class="pnk a_ab">
-				<a href="#">о нас</a>
-			</li>
-			<li class="pnk">
-				<a href="#">контакты</a>
-			</li>
-		</ul>	
-		<ul class="menu-right min-about">
-			<batton class="menu-right min-soc">
-				<i class="soc fa fa-question-circle-o" aria-hidden="true"></i>
-			</batton>
-			<batton class="menu-right min-soc">
-				<i class="soc fa fa-envelope-o" aria-hidden="true"></i>
-			</batton>
-		</ul>			
-	</div>
-	<div class="container-fluid cor">		
+            </li>
+            <li>
+                <a href="#">
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-facebook fa-stack-1x"></i>
+                    </span>                           
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/arnato/">
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle-thin fa-stack-2x"></i>
+                        <i class="fa fa-instagram fa-stack-1x"></i>
+                    </span>                             
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="next_button"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+            <div class="prev_button"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+            <div id="owl-demo" class="owl-carousel owl-theme">
 
-		<img src="img/Husky_theme.jpg" alt="" width="100%">
-		<img class="husky_1" src="svg/Husky_1.svg" height="70%">
+                <div class="item"><img src="images/Husky_theme.jpg" alt=""></div>
+                <div class="item"><img src="images/1 (2).jpg" alt=""></div>
+                <div class="item"><img src="images/s20016.jpg" alt=""></div>    
+            </div>            
+        </div>
+    </div>
 
-	</div>
-	<div class="container-fluid content">
-		
-		<div class="col-md-3 news-block">
-			<h1 class="news_h">Новости</h1>	
-			<div id="nh" class="row news-header">
+    <div class="container-fluid contents">
+        <div class="col-md-3 news block">
+        <h1>Новости</h1>
+            <div class="row header">
+            <div class="col-md-4">
+                <div class="date">
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-calendar-o fa-2x fa-stack-1x"></i>
+                        <span class="day">
+                            <i class="fa fa-stack-2x">7</i>
+                        </span>
+                    </span>
+                    <span class="new-month">
+                        <p>сентябрь</p>
+                    </span>
+                </div>
+            </div>                
+            <div class="col-md-8">
+                <h3>Название новости которая тут будет</h3>
+            </div>
+            </div>
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum veniam, velit impedit officia adipisci aut eveniet incidunt illo repellendus esse at illum similique fugiat neque necessitatibus aliquid, blanditiis voluptatem accusamus.<p>
+            </div>
+        </div>           
+        <div class="col-md-7 news block">
+            <h1>О нас</h1>
+            <div class="content">
+                <img src="images/Master.jpg" class="images" alt="" width="30%" >            
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras aliquet felis a nulla sagittis eleifend. Ut nec rutrum enim, sed scelerisque diam. Fusce dui massa, tincidunt sit amet auctor sed, aliquet eu est. Proin ac pulvinar nunc. Vestibulum viverra, lacus sed blandit egestas, erat orci tincidunt magna, vel elementum lacus nisl vel nibh. Aliquam non quam commodo, rhoncus orci id, accumsan leo. Pellentesque posuere massa orci, sed aliquet dolor imperdiet nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ultrices semper erat sit amet congue. Vestibulum gravida posuere neque eget iaculis. Duis eget erat in mauris condimentum efficitur.
 
-				<div class="col-md-4 news-date">
-					<span class="fa-stack fa-lg">
-						<i class="fa fa-calendar-o fa-2x fa-stack-1x"></i>
-						<i class="fa fa-stack-2x day">7</i>
-					</span>
-					<span>
-						<p class="month">месяц</p>
-					</span>
-				</div>
-				<div class="col-md-8 news-name">
-					<h3>Название новости которая тут будtn</h3>					
-				</div>
-			</div>
-			<div class="row news-content">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum veniam, velit impedit officia adipisci aut eveniet incidunt illo repellendus esse at illum similique fugiat neque necessitatibus aliquid, blanditiis voluptatem accusamus.
-				</div>
+                Praesent ut metus interdum, egestas dolor in, vulputate nunc. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce pretium vehicula orci, ac fringilla enim suscipit sagittis. Suspendisse tristique lobortis orci id semper. Ut vel pharetra felis. Nunc bibendum tincidunt mi, nec vehicula ante pharetra non. Pellentesque fermentum erat id odio semper, a laoreet nulla eleifend. Donec consectetur lorem sed ex suscipit, et rhoncus erat aliquet. Pellentesque convallis massa facilisis orci euismod congue. Mauris pulvinar pellentesque felis, non vehicula ex.
 
-			</div>
+                Integer placerat, metus sit amet blandit feugiat, ipsum purus ornare nisl, eu ullamcorper magna odio a ex. Curabitur semper auctor vehicula. Etiam tincidunt eget orci eget congue. Ut ac lacus ut dui posuere tincidunt a fermentum lacus. Donec ornare odio et lobortis ultricies. Nam sed diam efficitur, lobortis lectus vitae, accumsan ipsum. Praesent at iaculis mi.
 
-			<div class="col-md-7 content-block">
-				<div class="content-name">
-					<h1>О нас</h1>
-				</div>				
-				<img src="img/Master.jpg" class="images" alt="" width="30%">				
-				<div class="cont">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum veniam hic inventore repellat temporibus quia, ad. Omnis voluptate, ea ut et facilis optio debitis neque perspiciatis. Voluptatum odio tempore, qui.</p>
-				</div>
-			</div>	
-			<div class="col-md-2 gallery-block">
-			</div>
-		</div>
-		<div class="container-fluid footer">
-			<h3>Контакты</h3>
-		</div>
-		<script src="libs/jquery/jquery-1.11.1.min.js"></script>
-		<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-		<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
-		<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
-		<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-		<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-		<script src="libs/countdown/jquery.plugin.js"></script>
-		<script src="libs/countdown/jquery.countdown.min.js"></script>
-		<script src="libs/countdown/jquery.countdown-ru.js"></script>
-		<script src="libs/landing-nav/navigation.js"></script>
-		<script src="js/common.js"></script>
-		<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-		<!-- Google Analytics counter --><!-- /Google Analytics counter -->
-	</body>
-	</html>
+                Nunc interdum, urna at dapibus ornare, libero urna feugiat ante, vitae cursus urna diam ut magna. Cras placerat ligula lacus, at suscipit neque euismod et. Nullam sit amet purus elementum libero malesuada mattis vel non turpis. Vivamus pellentesque est eu felis convallis imperdiet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur vitae tempor odio. Fusce ac laoreet turpis. Vivamus mollis tellus et enim sodales consequat. Nulla finibus sodales mi, eu aliquam leo sagittis pellentesque. Praesent mollis dictum ultricies. Proin purus velit, scelerisque eget sodales in, vulputate eget ante.
+
+                Praesent dapibus ante fringilla sem tempus imperdiet. Cras bibendum finibus tortor ac porta. Morbi cursus leo massa, eget ultricies neque tincidunt tempus. Fusce lobortis tortor eget ex semper sagittis. Nam cursus orci et gravida auctor. In felis magna, viverra a ullamcorper eu, gravida eget augue. Quisque ultrices urna vitae libero pulvinar, posuere condimentum urna laoreet. Ut in tellus ut augue congue accumsan. Etiam purus sapien, ornare ac nisi id, viverra placerat ex. Quisque malesuada turpis ut eleifend gravida.</p>
+            </div>
+        </div>
+        <div class="col-md-2 gallery-block">
+        </div>
+    </div>
+    <div class="container-fluid footer">
+        <h3>Контакты</h3>
+        <p>Copyright &copy; Your Website 2014</p>
+    </div>
+            <!-- jQuery -->
+            <script src="js/jquery-3.1.0.min.js"></script>
+
+            <!-- Bootstrap Core JavaScript -->
+            <script src="js/bootstrap.min.js"></script>
+
+            <!-- Мои скриптики -->
+            <script src="js/common.js"></script>
+            <!-- Script to Activate the Carousel -->
+
+            <script src="libs/owl-carousel/owl.carousel.js"></script>
+        </body>
+        </html>
